--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -46,6 +46,10 @@ bridge_int: eth1
 # If you have code on a different branch than master, you can set it here.
 #devstack_branch: compute_err_exit
 
+# Barbican branch to download (default 'stable/kilo'). Use the 'master' branch
+# at your own risk.
+#barbican_branch: stable/kilo
+
 # You can specify a proxy, for example https://github.com/tmatilai/polipo-box,
 # to be used for HTTP connections to speed things up.
 #proxy: http://10.0.10.30:8123/
