Allow the specification of a different barbican repo

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -46,6 +46,9 @@ bridge_int: eth1
 # If you have code on a different branch than master, you can set it here.
 #devstack_branch: compute_err_exit
 
+# Non upstream Git URL to fetch Barbican from instead.
+#barbican_git: /home/vagrant/openstack/barbican
+
 # Barbican branch to download (default 'stable/kilo'). Use the 'master' branch
 # at your own risk.
 #barbican_branch: stable/kilo
