copy new variable config.yaml.sample -> config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -46,8 +46,10 @@ use_ip_resolver: true
 # If you have code on a different branch than master, you can set it here.
 devstack_branch: stable/kilo
 
-# Barbican branch to download (default 'stable/kilo'). Use the 'master' branch
-# at your own risk.
+# Non upstream Git URL to fetch Barbican from instead.
+#barbican_git: /home/vagrant/openstack/barbican
+
+# If you have code on a different branch than master, you can set it here.
 barbican_branch: stable/kilo
 
 # You can specify a proxy, for example https://github.com/tmatilai/polipo-box,
